# ComputorVision.OpenCv-Tensofflow

./: .gitignore  Important.Notes.txt  ReadMe.md  course.material.md  main.py  pyproject.toml  requirement.txt  uv.env.steps.txt
01_Face-Detection/: 02.FaceDetection.Camera.py
02_Face-Recognition/: 02.CaptureFace.Pycharm.py  03.FaceRecog.Create.Classifier.ipynb  04.FaceRecognition.Camera.py
03_Object-Tracking/: 01.Object.Tracking.py
04_Image-Classification.Simple-Neural.Nw/: 01.Image-Classification.All.Pixels.ipynb  02.Image-Classification.FeatureExtraction.OpenCv.ipynb  03.Image-Classification.Cat-Dogs.ipynb
05_Image-Classification.CNN/: 01.ImageClassification.CNN.ipynb  02.Image-Classification.Cats&Dogs.CNN.ipynb
06_Transfer-Learning-&-Fine-Tunning/: 01.Transfer-Learning-&-Fine-Tunning.ipynb  02.Transfer-Learning-&-Fine-Tunning-Dogs&Cats.ipynb
Cascades/: lbph_mehul_classifier.yml
